crates/icydb-core/tests/ui/db/logical_plan_not_reexported.stderr
error[E0432]: unresolved import `icydb_core::db::LogicalPlan`
 --> tests/ui/db/logical_plan_not_reexported.rs:1:5
  |
1 | use icydb_core::db::LogicalPlan;
  |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^ no `LogicalPlan` in `db`
