crates/icydb-core/tests/ui/db/logical_plan_not_reexported.rs
use icydb_core::db::LogicalPlan;

fn main() {}
